# pomyyka-the-game

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ANIMATION_FIX_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  WEBP_1080P_MIGRATION_SUMMARY.md  config.py  coverage.xml  create_animated_webp.py  delete_old_animations.py  docker-compose.yml  enhance_card_borders.py  logging_config.py  main.py  pyproject.toml  pytest.ini  regenerate_animations.py
.cursor/rules/: derived-cursor-rules.mdc
.github/workflows/: test.yml
.specstory/ai_rules_backups/: derived-cursor-rules.mdc.2026-01-01T22-27-26-491Z
.specstory/history/: 2026-01-01_21-56Z-хроніки-помийки-bot-initial-setup.md  2026-01-01_22-30Z-database-schema-and-biome-utility.md  2026-01-01_22-33Z-drop-claiming-race-condition-prevention.md  2026-01-01_22-34Z-chat-group-tracking-and-drop-claiming.md  2026-01-01_22-37Z-random-drops-scheduler-implementation.md  2026-01-01_22-39Z-admin-card-creation-flow.md  2026-01-01_22-45Z-group-chat-message-logging.md  2026-01-01_22-50Z-ai-card-blueprint-generation-service.md  2026-01-01_22-51Z-admin-autocard-handler-implementation.md  2026-01-01_22-51Z-gemini-art-forge-service.md  2026-01-01_22-54Z-art-forge-nano-banana-pro-model-update.md  2026-01-01_22-57Z-ai-services-gemini-model-upgrade.md  2026-01-01_22-59Z-gemini-3-0-preview-model-updates.md  2026-01-01_23-02Z-gemini-3-0-sdk-version-update.md  2026-01-01_23-02Z-gemini-3-configuration-in-ai-architect-service.md  2026-01-01_23-03Z-2026-production-stack-updates.md  2026-01-01_23-09Z-ai-architect-`google-genai`-v1-56-features.md  2026-01-01_23-09Z-art-forge-image-generation-and-review-fixes.md  2026-01-01_23-09Z-gemini-3-0-model-id-configuration.md  2026-01-01_23-12Z-dockerfile-startup-command-correction.md  2026-01-01_23-28Z-sqlalchemy-model-column-defaults.md  2026-01-01_23-31Z-handlers-drops-py-import-and-loop-fixes.md  2026-01-01_23-32Z-admin-handler-callbackdata-import.md  2026-01-01_23-32Z-python-`syntaxwarning`-break-in-finally.md  2026-01-01_23-34Z-aiogram-callbackdata-import-path.md  2026-01-01_23-37Z-syntaxwarning-break-in-finally-block.md  2026-01-01_23-39Z-powershell-extension-start-command-issue.md  2026-01-01_23-41Z-admin-id-configuration-for-features.md  2026-01-01_23-48Z-bot-keyboard-buttons.md  2026-01-01_23-53Z-user-card-eligibility-without-start-command.md  2026-01-02_08-21Z-геймдизайн-документ-хроніки-помийки.md  2026-01-02_08-36Z-bot-message-editing-logic.md  2026-01-02_08-48Z-wsl-error.md  2026-01-02_08-51Z-command-hints-for-users-and-admins.md  2026-01-02_08-52Z-admin-command-access-issue.md  2026-01-02_09-48Z-autocard-user-lookup-problem.md  2026-01-02_11-24Z-card-generation-buttons-issue.md  2026-01-02_11-32Z-nano-banana-pro-tcg-placeholder-data.md  2026-01-02_11-49Z-groupchat-icon-with-bot-api.md  2026-01-02_12-31Z-ai-studio-json-prompts-for-card-templates.md  (+22 more)
data/chat_exports/: .gitkeep
database/: __init__.py  enums.py  models.py  session.py
docs/analysis/: ANIMATION_ISSUES_ANALYSIS.md
docs/mechanics/: battle-system.md
docs/reference/: PROMPTS_FOR_AI_STUDIO.md  UPDATED_TEMPLATE_AI_STUDIO.md  UPDATED_TEMPLATE_PROMPTS.json  VIDEO_EFFECTS_TEMPLATES.md
docs/specifications/: CARD_GENERATION_FLOW.md  CARD_PLACEHOLDER_SPEC.md  plan-doc.md
handlers/: __init__.py  admin.py  admin_autocard.py  battles.py  drops.py  inline.py  player.py  trading.py  turn_battle_handler.py
middlewares/: __init__.py  group_tracker.py  logger.py  user_registration.py
scripts/: format_prompts_to_md.py  generate_updated_prompts.py
scripts/converters/: convert_placeholders_to_webp.py  convert_to_mp4.py  convert_webp_to_gif.py
scripts/image_processing/: add_fade_edges.py  remove_white_borders.py
scripts/maintenance/: regenerate_all_animations.py  regenerate_placeholder_animations.py
services/: __init__.py  ai_architect.py  art_forge.py  battle_engine.py  card_animator.py  card_architect.py  chat_import.py  cleanup.py  nano_banana.py  redis_lock.py  scheduler.py  session_manager.py  turn_battle.py
tests/: README.md  __init__.py  conftest.py  test_turn_battle.py  test_turn_battle_fixes.py
tests/database/: test_models.py  test_session.py
tests/handlers/: __init__.py  test_drops.py
tests/integration/: test_battle_flow.py  test_drop_flow.py
tests/middlewares/: test_user_registration.py
tests/services/: test_battle_engine.py  test_cleanup.py  test_redis_lock.py  test_scheduler.py
tests/utils/: test_biomes.py  test_card_ids.py  test_commands.py  test_emojis.py  test_text.py
utils/: __init__.py  animations.py  biomes.py  card_ids.py  commands.py  emojis.py  images.py  keyboards.py  telegram_utils.py  text.py
