[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pomyyka-the-game"
version = "0.1.0"
description = "Хроніки Помийки - A Ukrainian Telegram Card Game Bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.0,<4.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.0",
    "apscheduler>=3.10.0",
    "google-genai>=1.0.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
