[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pomyyka-the-game"
version = "0.1.0"
description = "Хроніки Помийки - A Ukrainian Telegram Card Game Bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.24.0",
    "asyncpg==0.31.0",
    "sqlalchemy[asyncio]==2.0.45",
    "alembic==1.17.2",
    "redis==7.1.0",
    "apscheduler==3.11.2",
    "google-genai==1.56.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "structlog==25.5.0",
    "python-dotenv==1.2.1",
    "Pillow==12.1.0",
    "numpy==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pytest-watch==4.2.0",
    "faker==40.1.0",
    "pre-commit==4.5.1",
    "httpx==0.28.1",
    "fakeredis==2.33.0",
    "aiosqlite==0.22.1",
    "black==25.12.0",
    "ruff==0.14.10",
    "mypy==1.19.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, require external services)",
    "slow: Slow running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/migrations/*",
    "*/alembic/*",
    "setup.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
